--- a/README
+++ b/README
@@ -14,3 +14,17 @@ There you will need to create the folder 'SiriProxy-Logic' and then put the file
 
 Configuiring
 ------------
+
+This plug-in uses "osascript" to open AppleScript files that I have created to run the commands within Logic.  Make sure that the AppleScript files are saved in:
+
+'/SiriProxy-Logic/lib/osafiles/'
+
+Also you will need to change your 'config.yml' file in:
+
+'~/.siriproxy' 
+
+to include:
+
+- name: 'Logic'
+  path: (The location of the plugin) e.g. '~/SiriProxy/plugins/SiriProxy-Logic'
+  host: (The location of Logic if not running on same device as Siri Proxy server e.g '192.168.0.3'
